--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,6 @@
 <%- include("header",{title}) %>
-    <h1><%= post.title %></h1>
-    <p><%= post.body %></p>
+    <div class="posts">
+        <h2><%= post.title %></h2>
+        <p><%= post.body %></p>
+    </div>
 <% include footer %>
