--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,13 +17,25 @@
 			<div id="top-header"><h1>Mwibutsa Floribert</h1></div>
 			<hr>
 			
-			<nav id="nav" class="nav">
-				<ul>
-					<li><a href="/">Home</a></li>
-					<li><a href="/">About</a></li>
-					<li><a href="/new-post">Manage Posts</a></li>
-					<li><a href="">Account</a></li>
-					<li><a href="/">Contact</a></li>
-				</ul>
-			</nav>
-			<div style="clear: both;"></div>
+			<div id="nav-container">
+				<nav id="nav" class="nav">
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/about-us">About</a></li>
+						<li><a href="/new-post">Manage Posts</a></li>
+						<li><a href="/contact-us">Contact</a></li>
+						<li><a href="#">Account</a>
+							<ul>
+								<li><a href="/account/login">Login</a></li>
+								<li><a href="/account/register">Sign up</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+				<nav id="right-nav">
+	
+				</nav>
+			</div>
+			<br>
+			<div style="clear:left">
+
