added new page adn routes

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,7 +27,7 @@
 						<li><a href="#">Account</a>
 							<ul>
 								<li><a href="/account/login">Login</a></li>
-								<li><a href="/account/register">Sign up</a></li>
+								<li><a href="/account/new-account">Sign up</a></li>
 							</ul>
 						</li>
 					</ul>
