--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,3 +187,10 @@ form{
 	margin: 0;
 	opacity: 0.3;
 }
+.center-justify{
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 10px;
+	text-align: justify;
+}
