--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -10,10 +10,9 @@
         <label>Email:</label><br>
         <input type="text" name="email" placeholder="email" class="text-input"><br><br>
         <label>Password:</label><br>
-        <input type="text" name="password" placeholder="password" class="text-input"><br><br>
+        <input type="password" name="password" placeholder="password" class="text-input"><br><br>
         <label>Confirm password:</label><br>
-        <input type="text" name="cpassword" placeholder="Confirm Password" class="text-input"><br><br>
-        <label>Password:</label><br>
+        <input type="password" name="cpassword" placeholder="Confirm Password" class="text-input"><br><br>
         <button type="submit">Add post</button>
     </form>
 </div>
