--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
 	<div>
 		<h1 class="text-center">Blog Posts</h1>
 		<hr>
-		<div class="posts">
+		<div class="page-grid">
+			<div class="posts">
 			<% posts.forEach((post)=>{ %>
 				<a href=<%= "/posts/"+post.id%>><h4 class="post-title"><%=  post.title%></h4></a>
 				<p><%= post.body %></p>
@@ -13,6 +14,8 @@
 			<% }); %>
 			
 
+			</div>
+			<%include sidebar %>
 		</div>
 	</div>
 
