--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <input type="email" name="username" placeholder="username" class="text-input"><br><br>
     <label>Password:</label><br>
     <input type="password" name="password" placeholder="password" class="text-input"><br><br>
-    <button type="submit">Add post</button>
+    <button type="submit">Login</button>
 </form>
 </div>
 <%include footer %>
