--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,17 @@
 <%- include("header",{title}) %>
-    <div class="posts">
+    <div class="page-grid">
+        <div>
         <h2><%= post.title %></h2>
-        <p><%= post.body %></p>
+        <p class="post-body"><%= post.body %></p>
+        <div class="comment">
+            <div class="comment-form">
+                <form method="post" action="/posts/comment">
+                    <textarea rows="2" cols="10"></textarea>
+                    <button type="submit">Comment</button>
+                </form>
+            </div>
+        </div>
+        </div>
+        <%include sidebar %>
     </div>
 <% include footer %>
