--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<%-include("header",{title}) %>
+<%-include("header",{title,loggedIn}) %>
 <h1 class="text-center">About Mwibutsa</h1>
 <hr>
 <div class="center-justify">
