--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include("header",{title,posts})%>
+<%- include("header",{title,posts,loggedIn})%>
 	<div id="home-header">
 		<h1>Welcome!</h1>
 	</div>
