--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('header',{title}) %>
+<%- include('header',{title,loggedIn}) %>
 <div>
 <h1 class="text-center">Log into your account</h1>
 <form method="post" action="/account/login">
