--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -1,4 +1,4 @@
-<%- include("header",{title})%>
+<%- include("header",{title,loggedIn})%>
 
 	<div>
 		<h1 class="text-center">Create a new blog post</h1>
