--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,6 +1,13 @@
-<%-include('header',{title}) %>
+<%-include('header',{title,loggedIn}) %>
 <div>
     <h1 class="text-center">Create a new account</h1>
+    <% if(errors){%>
+        <ol>
+            <%errors.forEach((error)=>{%>
+            <li style="color:red"><%=error.errorField%>: <%=error.errorMessage%></li>
+            <%})%>
+        </ol>
+    <%}%>
     <form method="post" action="/account/new-account">
 
         <label>Firstname:</label><br>
