--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,7 @@
 	</head>
 	<body>
 		<div id="wrapper">
+			<div class="main">
 			<div id="top-header"><h1>Mwibutsa Floribert</h1></div>
 			<hr>
 			
@@ -40,5 +41,5 @@
 				</nav>
 			</div>
 			<br>
-			<div style="clear:left">
+			<div>
 
