--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,6 +25,13 @@
 			src="https://www.facebook.com/tr?id=375680059670497&ev=PageView&noscript=1"
 		/></noscript>
 		<!-- End Facebook Pixel Code -->
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-9493502490210896",
+			enable_page_level_ads: true
+		});
+		</script>
 		
 	</head>
 	<body>
